# Aarambh

./: .env  .gitignore  README.md  agents.py  api_backend.py  app.py  bm25_index.pkl  call_section.py  chat_UI.py  conversation_logs.txt  index.html  ingest.py  main.py  package-lock.json  package.json  pipline.py  pyproject.toml  rag.py  requirments.txt  schema.py  synthetic_ambulance_data.csv  test_import.py
GIS/: g.py  gis.py
chroma_db_persistent/c618011e-2212-4151-9bf6-868122241cb5/: index_metadata.pickle
incident_reports/: report_7c54b6e3-3d1d-4dd8-b6e8-b9bf08a75b46.json  report_MZd58f20520d91c6574886d26abc6885c4.json  report_de644597-8eae-4c4c-886e-6e13d7baa0a5.json
src/: App.jsx  index.css
src/components/: ActionBar.jsx  AgentChatPanel.jsx  CallDetailsPanel.jsx  DispatcherDashboard.jsx  GISMapPanel.jsx  ResourcesTable.jsx  SituationPanel.jsx
src/data/: mockData.js
